--- a/pages/index.css
+++ b/pages/index.css
@@ -7,9 +7,28 @@
 
 /*header bl*/
 @import url(../blocks/header/header.css);
+@import url('../blocks/header/__link/header__link.css');
+@import url('../blocks/header/__text/header__text.css');
+@import url('../blocks/header/__help/header__help.css');
 
 /*content bl*/
 @import url(../blocks/content/content.css);
+
+/*intro*/
+@import url('../blocks/intro/intro.css');
+@import url('../blocks/intro/__image/intro__image.css');
+@import url('../blocks/intro/__subtitle/intro__subtitle.css');
+@import url('../blocks/intro/__text/intro__text.css');
+@import url('../blocks/intro/__title/intro__title.css');
+
+/*places*/
+@import url('../blocks/places/places.css');
+@import url('../blocks/places/__image/places__image.css');
+@import url('../blocks/places/__info/places__info.css');
+@import url('../blocks/places/__paragraph/places__paragraph.css');
+@import url('../blocks/places/__text/places__text.css');
+@import url('../blocks/places/__title/places__title.css');
+@import url('../blocks/places/__image/_position-centr/places__image_position-centr.css');
 
 /*footer bl*/
 @import url(../blocks/footer/footer.css);
