feat: реализовать адаптив для intro, places, quotes, footer

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,16 +1,38 @@
-.header{
-    max-width: 92%;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 50px auto 40px auto;
+.header {
+  max-width: 1280px;
+  min-width: 320px;
+  box-sizing: border-box;
+  padding: 35px 70px 70px;
+  font-family: "Inter", "Arial", "Helvetica", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
 }
 
-@media screen and (max-width: 420px){
-    .header{
-        margin: 20px auto 20px auto;
-        flex-direction: column;
-        align-items: flex-start;
-    }
+@media screen and (max-width: 1023px) {
+  .header {
+    padding-left: 40px;
+    padding-right: 40px;
   }
+}
+
+@media screen and (max-width: 767px) {
+  .header {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .header {
+    padding-bottom: 100px;
+  }
+}
+
+@media screen and (max-width: 424px) {
+  .header {
+    padding-bottom: 70px;
+  }
+}
