--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,13 +1,3 @@
-.places{
-    position: relative;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(3, 540px);
+.places {
+  width: 100%;
 }
-
-@media screen and (max-width: 550px){
-    .places{
-        grid-template-columns: minmax(320px, 1fr);
-        grid-template-rows: repeat(6, minmax(320px, 1fr));
-    }
-  }
