--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,12 +1,18 @@
 .footer__copyright {
   margin: 0;
-  font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
   font-size: 34px;
   line-height: 1.3;
   letter-spacing: 0.8px;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__copyright {
+    font-size: 28px;
+  }
+}
+
+@media screen and (max-width: 424px) {
+  .footer__copyright {
+    font-size: 24px;
+  }
 }
