--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,8 +1,39 @@
 .footer {
   max-width: 1280px;
+  min-width: 320px;
   height: 630px;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #fecda7;
+  font-family: "Inter", "Arial", "Helvetica", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+}
+
+@media screen and (max-width: 1279px) {
+  .footer {
+    height: 550px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .footer {
+    height: 400px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer {
+    height: 320px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer {
+    height: 200px;
+  }
 }
