--- a/blocks/header/__help/header__help.css
+++ b/blocks/header/__help/header__help.css
@@ -1,13 +1,30 @@
-.header__help{
-    font-size: 14px;
-    line-height: 1.1;
-    font-weight: normal;
-    margin: 0;
-    list-style-type: none;
-    text-decoration: none;
-    color: black;
+.header__help {
+  position: relative;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 1.1;
+  margin: 0;
+  list-style-type: none;
+  text-decoration: none;
+  color: #000;
+  transition: opacity 0.4s;
 }
 
-.header__help:hover{
-    opacity: 0.8;
+.header__help::after {
+  position: absolute;
+  left: 0;
+  bottom: -5px;
+  content: "";
+  width: 0;
+  height: 2px;
+  background-color: #000;
+  transition: width 0.4s;
+}
+
+.header__help:hover {
+  opacity: 0.6;
+}
+
+.header__help:hover::after {
+  width: 100%;
 }
