--- a/blocks/intro/__image/intro__image.css
+++ b/blocks/intro/__image/intro__image.css
@@ -1,20 +1,25 @@
-.intro__image{
-    object-fit: cover;
-    width: 350px;
-    height: 350px;
-    margin: 0 auto;
+.intro__image {
+  object-fit: cover;
+  width: 355px;
+  height: 355px;
 }
 
-@media screen and (max-width: 700px){
-    .intro__image{
-        width: 200px;
-        height: 200px;
-    }
+@media screen and (max-width: 1023px) {
+  .intro__image {
+    width: 320px;
+    height: 320px;
   }
+}
 
-  @media screen and (max-width: 550px){
-    .intro__image{
-        width: 100%;
-        height: 200px;
-    }
+@media screen and (max-width: 767px) {
+  .intro__image {
+    width: 100%;
   }
+}
+
+@media screen and (max-width: 424px) {
+  .intro__image {
+    grid-row: 1;
+    height: 200px;
+  }
+}
