--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,19 +1,3 @@
 .page {
-    min-width: 320px;
-    max-width: 1280px;
-    margin: 0 auto;
-    font-family: 'Inter', Arial, sans-serif;
-    background-color: #ffffff;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
-    text-rendering: optimizeLegibility;
+  width: 100%;
 }
-
-/*
-* {
-    outline: orangered solid 1px;
-}
-*/
