--- a/pages/index.css
+++ b/pages/index.css
@@ -4,37 +4,54 @@
 
 /*page bl*/
 @import url(../blocks/page/page.css);
+/*page el*/
+@import url(../blocks/page/__header/page__header.css);
+@import url(../blocks/page/__content/page__content.css);
+@import url(../blocks/page/__footer/page__footer.css);
 
 /*header bl*/
 @import url(../blocks/header/header.css);
-@import url('../blocks/header/__link/header__link.css');
-@import url('../blocks/header/__text/header__text.css');
-@import url('../blocks/header/__help/header__help.css');
+/*header el*/
+@import url(../blocks/header/__navigation/header__navigation.css);
+@import url(../blocks/header/__links/header__links.css);
+@import url(../blocks/header/__link/header__link.css);
+@import url(../blocks/header/__help/header__help.css);
+@import url(../blocks/header/__menu/header__menu.css);
+@import url(../blocks/header/__menu-item/header__menu-item.css);
 
 /*content bl*/
 @import url(../blocks/content/content.css);
+/*content el*/
+@import url(../blocks/content/__section/content__section.css);
 
-/*intro*/
-@import url('../blocks/intro/intro.css');
-@import url('../blocks/intro/__image/intro__image.css');
-@import url('../blocks/intro/__subtitle/intro__subtitle.css');
-@import url('../blocks/intro/__text/intro__text.css');
-@import url('../blocks/intro/__title/intro__title.css');
+/*intro bl*/
+@import url(../blocks/intro/intro.css);
+/*intro el*/
+@import url(../blocks/intro/__image/intro__image.css);
 
-/*places*/
-@import url('../blocks/places/places.css');
-@import url('../blocks/places/__image/places__image.css');
-@import url('../blocks/places/__info/places__info.css');
-@import url('../blocks/places/__paragraph/places__paragraph.css');
-@import url('../blocks/places/__text/places__text.css');
-@import url('../blocks/places/__title/places__title.css');
-@import url('../blocks/places/__image/_position-centr/places__image_position-centr.css');
+/*section bl*/
+@import url(../blocks/section/section.css);
+/*section el*/
+@import url(../blocks/section/__sign/section__sign.css);
+@import url(../blocks/section/__title/section__title.css);
+
+/*places bl*/
+@import url(../blocks/places/places.css);
+
+/*place bl*/
+@import url(../blocks/place/place.css);
+/*place el*/
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__info/place__info.css);
+@import url(../blocks/place/__paragraph/place__paragraph.css);
+@import url(../blocks/place/__text/place__text.css);
+@import url(../blocks/place/__title/place__title.css);
+/*place mod*/
+@import url(../blocks/place/_reverse/place_reverse.css);
 
 /*quotes bl*/
 @import url(../blocks/quotes/quotes.css);
 /*quotes el*/
-@import url(../blocks/quotes/__sign/quotes__sign.css);
-@import url(../blocks/quotes/__title/quotes__title.css);
 @import url(../blocks/quotes/__items/quotes__items.css);
 @import url(../blocks/quotes/__item/quotes__item.css);
 @import url(../blocks/quotes/__author/quotes__author.css);
@@ -44,4 +61,3 @@
 @import url(../blocks/footer/footer.css);
 /*footer el*/
 @import url(../blocks/footer/__copyright/footer__copyright.css);
-
