--- a/blocks/header/__links/header__links.css
+++ b/blocks/header/__links/header__links.css
@@ -1,6 +1,15 @@
 .header__links {
   display: flex;
   padding: 0;
+  margin: 0;
   text-decoration: none;
   list-style-type: none;
+}
+
+@media screen and (max-width: 479px) {
+  .header__links {
+    border-bottom: 1px solid #000;
+    width: 100%;
+    flex-direction: column;
+  }
 }
