--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -27,8 +27,12 @@
 
 @media screen and (max-width: 479px) {
   .header {
-    background-color: #f2f2f2;
-    padding-top: 30px;
+    padding-bottom: 100px;
+  }
+}
+
+@media screen and (max-width: 424px) {
+  .header {
     padding-bottom: 70px;
   }
 }
