--- a/pages/index.css
+++ b/pages/index.css
@@ -16,6 +16,9 @@
 @import url(../blocks/header/__links/header__links.css);
 @import url(../blocks/header/__link/header__link.css);
 @import url(../blocks/header/__help/header__help.css);
+@import url(../blocks/header/__menu/header__menu.css);
+@import url(../blocks/header/__menu-toggle/header__menu-toggle.css);
+@import url(../blocks/header/__menu-item/header__menu-item.css);
 
 /*content bl*/
 @import url(../blocks/content/content.css);
