--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,12 +1,43 @@
-.header__link{
-    display: flex;
-    padding: 0;
-    text-decoration: none;
-    list-style-type: none;
+.header__link {
+  position: relative;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 1.1;
+  margin: 0;
+  margin-right: 35px;
+  list-style-type: none;
+  text-decoration: none;
+  color: #000;
+  transition: opacity 0.4s;
 }
 
-@media screen and (max-width: 420px){
-    .header__link{
-        flex-direction: column;
-    }
+.header__link:hover {
+  opacity: 0.6;
+}
+
+@media screen and (min-width: 480px) {
+  .header__link::after {
+    position: absolute;
+    left: 0;
+    bottom: -5px;
+    content: "";
+    width: 0;
+    height: 2px;
+    background-color: #000;
+    transition: width 0.4s;
   }
+
+  .header__link:hover::after {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .header__link {
+    display: inline-block;
+    margin: 0 0 40px;
+    font-size: 18px;
+    letter-spacing: 1px;
+    color: #fff;
+  }
+}
