--- a/pages/index.css
+++ b/pages/index.css
@@ -62,3 +62,16 @@
 @import url(../blocks/footer/footer.css);
 /*footer el*/
 @import url(../blocks/footer/__copyright/footer__copyright.css);
+
+/*popup bl*/
+@import url(../blocks/popup/popup.css);
+/*popup el*/
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__comments/popup__comments.css);
+@import url(../blocks/popup/__submit-button/popup__submit-button.css);
+@import url(../blocks/popup/__close/popup__close.css);
+/*popup mod*/
+@import url(../blocks/popup/_active/popup_active.css);
